# OrionSimulator

./: .gitignore  CMakeLists.txt  config.json  main.cpp
src/Core/: ConfigManager.cpp  ConfigManager.h
src/Network/: NetworkManager.cpp  NetworkManager.h  NetworkService.cpp  NetworkService.h
src/Scenes/: IScene.h  PolygonScene.cpp  PolygonScene.h  ReflexScene.cpp  ReflexScene.h  SceneManager.cpp  SceneManager.h
src/UI/: Main.qml
